--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -5,6 +5,7 @@ body {
 	font-family: 'Palatino','Palatino Linotype','Palatino LT STD','Book Antiqua','Georgia,serif';
 	line-height: 1.25;
 	font-size: 1vw;
+	margin-left: 5px;
   width: 100%;
 	}
 
